--- a/src/scss/blocks/form/__back-link/form__back-link.scss
+++ b/src/scss/blocks/form/__back-link/form__back-link.scss
@@ -4,7 +4,7 @@
   height: 12px;
   margin: 0 7px 0 0;
   border: none;
-  background: transparent url(../../../images/back.png) no-repeat (center /contain);
+  background: transparent url(../images/back.png) no-repeat (center /contain);
   opacity: 1;
   transition: opacity 1s ease;
 
