--- a/src/scss/blocks/page/page.scss
+++ b/src/scss/blocks/page/page.scss
@@ -2,7 +2,7 @@
   min-height: 100vh;
   min-width: 320px;
   margin: 0 auto;
-  background: url(../../images/mask.svg) no-repeat (center / 626px 434px), rgba(0, 0, 0, 0.5) url(../../images/purple_sunset-wallpaper-2880x1800.png) no-repeat (center / cover);
+  background: url(../images/mask.svg) no-repeat (center / 626px 434px), rgba(0, 0, 0, 0.5) url(../images/purple_sunset-wallpaper-2880x1800.png) no-repeat (center / cover);
   background-blend-mode: overlay;
   font-family: 'Helvetica Neue', 'Arial', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -14,10 +14,10 @@
   justify-content: center;
 
   @media screen and (max-width: 720px) {
-    background: url(../../images/mask.svg) no-repeat (center / 87% 434px), rgba(0, 0, 0, 0.5) url(../../images/purple_sunset-wallpaper-2880x1800.png) no-repeat (center / cover)
+    background: url(../images/mask.svg) no-repeat (center / 87% 434px), rgba(0, 0, 0, 0.5) url(../images/purple_sunset-wallpaper-2880x1800.png) no-repeat (center / cover)
   }
 
   @media screen and (max-width: 425px) {
-    background: url(../../images/mask.svg) no-repeat (center / 87% 396px), rgba(0, 0, 0, 0.5) url(../../images/purple_sunset-wallpaper-2880x1800.png) no-repeat (center / cover)
+    background: url(../images/mask.svg) no-repeat (center / 87% 396px), rgba(0, 0, 0, 0.5) url(../images/purple_sunset-wallpaper-2880x1800.png) no-repeat (center / cover)
   }
 }
